tests/errors/unresolved_type.vir
mod Top {
    // CHECK: Unresolved type Foo
    incoming foo : Foo
    outgoing out : Word[8]
    out := foo->bar
}
